@@ -1,10 +1,14 @@
+def f(x) {
+    return x * 2;
+}
+
 class S28 {
     var x = 0;
     def S28() {
 
     }
 
-    def setx(nx) {
-        x = nx;
+    def setx(nx, ny=0, nz=1) {
+        x = f(nx);
     }
 }
